# bank-deposit-predictor

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
data/: test.csv.dvc  train.csv.dvc
notebooks/: data_exploration.ipynb  dataset.py  model_selection.ipynb
src/depositpredictor/: __main__.py  api.py  mapper.py  model.py  predictor.py
tests/: test_api.py  test_predictor.py
